# usv_control_msgs

./: CMakeLists.txt  package.xml
msg/: AzimuthThrusterCatamaranDrive.msg  AzimuthThrusterCatamaranDriveStamped.msg
